# OOPLabs

./: Circle.cpp  Exception.h  InputHandler.cpp  Rectangle.h  ShapeController.h  ShapeControllerFactory.cpp  ShapeControllerFactory.h  ShapeType.h  Triangle.cpp  lab1.pro
lab1/: Circle.cpp  Circle.h  InputHandler.h  RectangleController.cpp  TriangleController.h  lab1.pro  main.cpp
lab1/include/: EndOfFileException.h  Exception.h  InputHandler.h  InvalidParams.h  Point.h  ShapeControllerFactory.h  SyntaxError.h  lib.h
lab1/include/CommandProcessors/: CommandProcessor.h  CommandProcessor1.h  (+7 more)
lab1/src/: EndOfFileException.cpp  InputHandler.cpp  InvalidParams.cpp  Point.cpp  ShapeControllerFactory.cpp  SyntaxError.cpp  lib.cpp  main.cpp
lab2/: CMakeLists.txt  Makefile  compile_commands.json  compile_flags.txt  image.dot
lab2/.cache/clangd/index/: BinarySearchTree.h.3ABB3C2B194D07BE.idx  main.cpp.D6925D0D134E4E57.idx
lab2/include/: BinarySearchTree.h  OutputBinarySearchTree.h
lab2/src/: main.cpp
lab3/: MainWindow.ui  lab3.pro
lab3/include/: Calculator.h  CalculatorEvalCommand.h  Command.h  EvalCommand.h  Expression.h  GUIEvalCommand.h  GUI_Invoker.h  InputWidgets.h  Invoker.h  LongFloat.h  MainWindow.h  MathFunctions.h  Singleton.h
lab3/src/: EvalCommand.cpp  Expression.cpp  InputWidgets.cpp  LongFloat.cpp  MainWindow.cpp  MathFunctions.cpp  main.cpp
lab3_long_arithm/: MainWindow.ui  lab3.pro
lab3_long_arithm/include/: Expression.h  LongFloat.h  MainWindow.h
lab3_long_arithm/src/: Expression.cpp  InputWidgets.cpp  LongFloat.cpp  main.cpp
(+65 files in other folders)
